<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".ConvertTemperatureQuestionSix">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/description_title_txt" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="20dp"
        android:hint="@string/edit_txt_title"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="LabelFor,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <Switch
        android:id="@+id/is_negative_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/negative_value"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <Space
        android:layout_width="1dp"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/convert_button_title"
        tools:ignore="VisualLintButtonSize" />

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />



</LinearLayout>