<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        android:padding="14dp"
        tools:context=".CalculateMediaStudentQuestionFive">

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/description_title_txt_question_five" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="results_animation.json"
            app:lottie_loop="true" />

        <EditText
            android:id="@+id/result_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/result_one_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/result_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/result_two_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/result_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/result_three_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/result_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/result_four_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingTop="20dp"
            android:textColorHint="#8D6E63"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <Space
            android:layout_width="1dp"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/calc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/calculate_button"
            tools:ignore="VisualLintButtonSize" />

        <Space
            android:layout_width="1dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>

