<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".CalculeCarGasQuestionFour">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_4"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/description_title_txt_question_four" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="car_animation.json"
        />

    <EditText
        android:id="@+id/kilometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="20dp"
        android:hint="@string/quantity_kilometer"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="LabelFor,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:paddingTop="20dp"
        android:hint="@string/quantity_liters"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="LabelFor,VisualLintTextFieldSize"
        android:importantForAutofill="no" />

    <Space
        android:layout_width="1dp"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/calculate_button"
        tools:ignore="VisualLintButtonSize" />

    <Space
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />



</LinearLayout>